<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dp" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif-monospace"
                android:text="Please Fill the form"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edt_cr_amt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/hit_cr_amt"
            android:inputType="textCapWords"
            android:maxLength="10"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hints_color"
            android:textSize="16sp"
            tools:drawableLeft="@mipmap/ic_launcher" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edt_loan_purpose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/hit_loan_purpose"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hints_color"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <EditText
            android:id="@+id/ext_to_day"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@android:drawable/ic_menu_month"
            android:drawablePadding="8dp"
            android:focusable="auto"
            android:gravity="center_vertical"
            android:hint="@string/ht_loan_to_day_date"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hints_color"
            android:textSize="16sp"
            tools:drawableLeft="@android:drawable/ic_menu_my_calendar" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edt_pay_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@android:drawable/ic_menu_month"
            android:drawablePadding="8dp"
            android:focusable="auto"
            android:gravity="center_vertical"
            android:hint="@string/ht_loan_end_pay_date"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hints_color"
            android:textSize="16sp"
            tools:drawableLeft="@android:drawable/ic_menu_my_calendar" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <AutoCompleteTextView
            android:id="@+id/txt_member1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/stat_notify_more"
            android:hint="@string/ht_resp_1"
            tools:drawableLeft="@android:drawable/ic_menu_view" />

        <AutoCompleteTextView
            android:id="@+id/txt_member2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_view"
            android:hint="@string/ht_resp_2" />

        <AutoCompleteTextView
            android:id="@+id/txt_member3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_view"
            android:hint="@string/ht_resp_3" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Interest (5%) :  " />

            <TextView
                android:id="@+id/txt_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="5000" />

            <Button
                android:id="@+id/btn_check_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Check Interest" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/chk_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/agree_terms"
            android:textColor="@color/white_greyish"
            android:textSize="14sp"
            tools:textColor="@color/black" />

        <Button
            android:id="@+id/btn_request"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_action_add"
            android:padding="3dp"
            android:text="@string/ht_requist"
            android:textColor="@color/hints_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/h2g_sentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/h2g_fml"
            android:textColor="@color/white_greyish"
            android:textColorHighlight="@color/white_greyish"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>